--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
     sans-serif;
   font-size: 18px;
   font-weight: 500;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 main {
@@ -101,6 +101,25 @@ p {
   font-weight: 500;
   line-height: 48px;
   letter-spacing: -1%;
+}
+
+a {
+  color: inherit;
+  display: inline-block;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 800;
+  letter-spacing: -0.18px;
+  line-height: 150%;
+  text-decoration-color: #17a16c;
+  text-decoration-line: underline;
+  text-decoration-skip-ink: auto;
+  text-decoration-style: wavy;
+  text-decoration-thickness: 3px;
+  text-underline-offset: 25%;
+  text-underline-position: from-font;
+  line-height: 0;
 }
 
 /*------ CTA ------*/
@@ -272,21 +291,7 @@ p {
 
 #donate a,
 footer a {
-  color: #fff;
-  display: inline-block;
-  font-family: Montserrat;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 800;
-  letter-spacing: -0.18px;
-  line-height: 150%;
-  text-decoration-color: #17a16c;
-  text-decoration-line: underline;
-  text-decoration-skip-ink: auto;
-  text-decoration-style: wavy;
-  text-decoration-thickness: 3px;
-  text-underline-offset: 25%;
-  text-underline-position: from-font;
+  color: white;
 }
 
 footer {
