--- a/main.css
+++ b/main.css
@@ -41,6 +41,7 @@ header > div {
   flex-grow: 1;
   max-width: 900px;
   justify-self: center;
+  align-items: center;
 }
 
 .download-cta {
@@ -109,7 +110,7 @@ a {
   font-family: Montserrat;
   font-size: 18px;
   font-style: normal;
-  font-weight: 800;
+  font-weight: 600;
   letter-spacing: -0.18px;
   line-height: 150%;
   text-decoration-color: #17a16c;
@@ -123,7 +124,7 @@ a {
 }
 
 /*------ CTA ------*/
-#cta {
+#cta, #support, #privacy {
   align-items: center;
   align-self: center;
   display: flex;
@@ -161,6 +162,18 @@ a {
   margin-bottom: 10px;
   margin-left: 40px;
   width: 360px;
+}
+
+#privacy h3 ,
+#support h3 {
+  margin-top: 32px;
+  margin-bottom: 8px;
+}
+
+#privacy .content,
+#support .content {
+  max-width: 900px;
+  margin-bottom: 64px;
 }
 
 .disclaimer {
