--- a/main.css
+++ b/main.css
@@ -327,3 +327,128 @@ footer a {
   display: inline;
   margin: 0 4px;
 }
+
+@media screen and (max-width: 960px) {
+  header > div {
+    max-width: 100%;
+    padding: 0 20px;
+  }
+  
+  #cta, #support, #privacy, section {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+
+  #cta .content {
+    max-width: 100%;
+    margin: 0 20px;
+  }
+
+  .hero {
+    position: relative;
+    width: 100%;
+    height: 435px;
+  }
+
+  .hero h3 {
+    display: none;
+  }
+
+  .hero-container:first-of-type {
+    position: absolute;
+    left: 20px;
+    filter: grayscale(100%) drop-shadow(0px 8px 24px rgba(0,0,0,0.2));
+    opacity: 0.5;
+  }
+
+  .hero-container:last-of-type {
+    position: absolute;
+    right: 20px;
+    top: 28px;
+    filter: drop-shadow(0px 8px 24px rgba(0,0,0,0.2));
+  }
+
+  #download .browser {
+    display: none;
+  }
+
+  #donate .content,
+  #download .content,
+  footer .content {
+    align-self: center;
+    max-width: 100%;
+    padding: 0 20px;
+  }
+  
+  #download h2 {
+    margin-top: 0;
+    max-width: 100%;
+    margin-top: 20px;
+  }
+
+  #teaser {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    min-height: 1200px;
+    overflow: hidden;
+    width: 100%;
+  }
+  
+  #teaser .content {
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  #teaser h2 {
+    margin-top: 20px;
+    width: calc(100% - 40px);
+  }
+  
+  #teaser p {
+    width: calc(100% - 40px);
+  }
+  
+  #teaser img {
+    bottom: -840px;
+    position: absolute;
+    right: 50%;
+    transform: translateX(50%);
+    filter: drop-shadow(0px 8px 24px rgba(0,0,0,0.2));
+  }
+}
+
+@media screen and (max-width: 560px) {
+  p {
+    font-size: 16px;
+  }
+
+  .hero {
+  }
+
+  .hero h3 {
+    display: none;
+  }
+
+  .hero-container:first-of-type,
+  .hero-container:last-of-type {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .button {
+    width: 100%;
+  }
+
+  #teaser {
+    min-height: 1620px;
+  }
+  
+  #teaser img {
+    bottom: -820px;
+  }
+}
